# pipelined-hsic

./: .gitignore  README.md  pyproject.toml
src/: fairscale_pipeline.py  vanilla_pipeline.py
