[tool.poetry]
name = "pipelined-hsic"
version = "0.1.0"
description = ""
authors = ["Krut Patel <f20170184@hyderabad.bits-pilani.ac.in>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.8.0"
torchvision = "^0.9.0"
requests = "^2.25.1"
matplotlib = "^3.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
