[tool.poetry]
name = "pipelined-hsic"
version = "0.1.0"
description = ""
authors = ["Krut Patel <f20170184@hyderabad.bits-pilani.ac.in>"]

[tool.poetry.dependencies]
python = "3.9"
torch = {url="https://download.pytorch.org/whl/nightly/cu102/torch-1.9.0.dev20210505%2Bcu102-cp39-cp39-linux_x86_64.whl"}
torchvision = {url="https://download.pytorch.org/whl/nightly/cu102/torchvision-0.10.0.dev20210505-cp39-cp39-linux_x86_64.whl"}
fairscale = {git="https://github.com/facebookresearch/fairscale.git"}
requests = "^2.25.1"
matplotlib = "^3.3.4"
torchsummary = "^1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
